Ensure ResourceFactory creates proxies with right GType

https://bugzilla.gnome.org/show_bug.cgi?id=678701